<resources>
    <string name="app_name">SmartServer</string>
    <string name="app_full_name">SmartServer Mobile</string>
    <string name="search_input_hint">Search</string>
    <string name="label_list_no_record">No record available.</string>
    <string name="label_not_support">Feature is not support for this device.</string>
    <string name="label_default_txt">label</string>
    <string name="label_value_txt">-</string>
    <string name="msg_loading">Loading ...</string>
    <string name="msg_action_success">Operation successful</string>
    <string name="msg_action_failed">Operation failed</string>
    <string name="msg_auth_failed_title">Authentication failed</string>
    <string name="msg_auth_illegal_account">Check whether the user name and password are correct or whether the account status is normal.</string>
    <string name="msg_auth_too_many_session">The number of concurrent login users exceeds the limit. </string>
    <string name="msg_not_implement">This feature is not supported on current device</string>
    <string name="msg_access_api_failed">Request failed. </string>
    <string name="msg_access_api_timeout">Request Timeout. </string>
    <string name="msg_app_exception">Application exception.</string>
    <string name="resource_state_enabled">Enable</string>
    <string name="resource_state_disabled">Disable</string>
    <string name="resource_state_absent">Absent</string>
    <string name="state_unknown">Unknown</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Enable">Enable</string>
    <string name="Disable">Disable</string>
    <string name="Stopped">Stopped</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="no_browser_app_found">Failed to find the browser. </string>
    <string name="please_install_a_browser_app">Install the browser.</string>
    <string name="md_up_label">Up</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="md_new_folder">New Folder</string>
    <string name="title_go_back_txt">Back</string>
    <string name="title_device_list">Devices</string>
    <string name="title_add_device">Add Device</string>
    <string name="title_edit_device">Edit Device</string>
    <string name="title_display_report">Details</string>
    <string name="title_discovery">Discover</string>
    <string name="title_my_profile">Me</string>
    <string name="title_about_us">About</string>
    <string name="title_feedback">Help and Feedback</string>
    <string name="title_submit_feedback">Feedback</string>
    <string name="title_network_port">Network Port List</string>
    <string name="title_drive">Drive List</string>
    <string name="title_volumes">Logical Drive List</string>
    <string name="title_security">Security</string>
    <string name="title_policy">User Protocol</string>
    <string name="menu_about_me">Me</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_find">Discover</string>
    <string name="button_done">OK</string>
    <string name="button_share">Share</string>
    <string name="button_sure">Yes</string>
    <string name="button_submit">Submit</string>
    <string name="button_finish">Done</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_recount">Refresh</string>
    <string name="ds_dialog_input_device_pwd_hint">Enter the device password. </string>
    <string name="ds_label_no_search_history">No historical records available. </string>
    <string name="ds_label_no_device">No data available. </string>
    <string name="ds_label_recent_history">Search History</string>
    <string name="ad_default_device_name">Device</string>
    <string name="ad_as_connect_type_title">Select the access mode. </string>
    <string name="ad_section_title_device">Device Info</string>
    <string name="ad_section_title_authentication">Authentication Info</string>
    <string name="ad_connect_type_network">Network</string>
    <string name="ad_connect_type_mobile">Cellular (not supported)</string>
    <string name="ad_connect_type_bluetooth">Bluetooth (not supported)</string>
    <string name="ad_label_connect_type">Access Mode</string>
    <string name="ad_label_hostname">Host</string>
    <string name="ad_hint_hostname">Domain name or IP address</string>
    <string name="ad_label_port">Port</string>
    <string name="ad_hint_port">Port to be accessed</string>
    <string name="ad_label_alias">Alias</string>
    <string name="ad_label_username">User</string>
    <string name="ad_hint_username">User name</string>
    <string name="ad_label_password">Password</string>
    <string name="ad_hint_password">Password</string>
    <string name="ad_label_remember_pwd">Remember Password</string>
    <string name="ad_label_domain">Domain</string>
    <string name="ad_connect_type_is_empty">Select the access mode. </string>
    <string name="ad_hostname_is_empty">The IP address/host name cannot be empty. </string>
    <string name="ad_hostname_is_illegal">Incorrect IP address/host name format. </string>
    <string name="ad_hostname_exists">A device that has the same IP address or host name already exists</string>
    <string name="ad_port_is_empty">The port cannot be empty. </string>
    <string name="ad_port_is_illegal">Port must be a number from 0 to 65535. </string>
    <string name="ad_username_is_empty">The user name cannot be empty. </string>
    <string name="ad_password_is_empty">The password cannot be empty. </string>
    <string name="ad_failed_to_add_device">Failed to add the device. </string>
    <string name="ds_label_basic_info">System Info</string>
    <string name="ds_label_model">Product Model</string>
    <string name="ds_label_ipv4">IPv4 Address</string>
    <string name="ds_label_ipv6">IPv6 Address</string>
    <string name="ds_label_menu_health">Active Alarms</string>
    <string name="ds_label_menu_system_log">System Events</string>
    <string name="ds_label_menu_network_setting">Network</string>
    <string name="ds_label_menu_hardware">Hardware</string>
    <string name="ds_label_menu_realtime_state">Dashboard</string>
    <string name="ds_label_menu_location">Location</string>
    <string name="ds_label_menu_power_consumption">Power Meter</string>
    <string name="ds_label_menu_boot_setting">Boot Settings</string>
    <string name="ds_label_menu_power">Power Control</string>
    <string name="ds_label_menu_expend">More</string>
    <string name="ds_label_menu_indicator_LED">UID</string>
    <string name="ds_label_menu_firmware">Firmware</string>
    <string name="ds_label_menu_report">Report</string>
    <string name="ds_label_menu_collector">Collection</string>
    <string name="ds_label_menu_folder">Collapse</string>
    <string name="system_log_select_create_date_today">Today</string>
    <string name="system_log_select_create_date_seven_days">Last 7 days</string>
    <string name="system_log_select_create_date_one_month">Last 30 days</string>
    <string name="system_log_select_create_date_range">Special Date Range</string>
    <string name="system_log_select_all">All</string>
    <string name="hardware_cpu_label_manufacturer">Manufacturer</string>
    <string name="hardware_cpu_label_model">Model</string>
    <string name="hardware_cpu_label_processor_id">Processor ID</string>
    <string name="hardware_cpu_label_speed_MHZ">Frequency</string>
    <string name="hardware_cpu_label_cores_and_threads">Cores/Threads</string>
    <string name="hardware_cpu_label_L123_cache">L1/L2/L3 Cache</string>
    <string name="hardware_cpu_label_part_no">BOM Code</string>
    <string name="hardware_storage_label_name">Name</string>
    <string name="hardware_storage_label_firmware_version">Firmware Version</string>
    <string name="hardware_storage_label_support_raid_level">RAID Level</string>
    <string name="hardware_storage_label_configure_version">Version</string>
    <string name="hardware_storage_label_memory_size_MB">Memory Size</string>
    <string name="hardware_storage_label_speed">Port Speed</string>
    <string name="hardware_storage_label_sas_addr">SAS Address</string>
    <string name="hardware_storage_label_stripe_range">Supported Stripe Range</string>
    <string name="hardware_storage_label_maintain_pd_fail_history">Maintain PD Fail History</string>
    <string name="hardware_storage_label_copy_back_state">Copyback</string>
    <string name="hardware_storage_label_smart_copy_back_state">Copyback on SMART Error</string>
    <string name="hardware_storage_label_JOBD_state">JBOD</string>
    <string name="hardware_storage_label_bbu_name">BBU Name</string>
    <string name="hardware_storage_label_bbu_state">BBU Status</string>
    <string name="hardware_storage_label_volumes">Logical Drive List</string>
    <string name="hardware_storage_label_disk">Drive List</string>
    <string name="drive_label_protocol">Interface Type</string>
    <string name="drive_label_manufacturer">Manufacturer</string>
    <string name="drive_label_model">Model</string>
    <string name="drive_label_sn">Serial Number</string>
    <string name="drive_label_revision">Firmware Version</string>
    <string name="drive_label_media">Media Type</string>
    <string name="drive_label_temperature">Temperature</string>
    <string name="drive_label_fw_status">Firmware State</string>
    <string name="drive_label_sas0">SAS Address(0)</string>
    <string name="drive_label_sas1">SAS Address(1)</string>
    <string name="drive_label_capacity">Capacity</string>
    <string name="drive_label_capable_speed_gbs">Capable Speed</string>
    <string name="drive_label_negotiated_speed_gbs">Negotiated Speed</string>
    <string name="drive_label_power_state">Power State</string>
    <string name="drive_label_hotspare_type">Hot Spare State</string>
    <string name="drive_label_rebuild_state">Rebuild Status</string>
    <string name="drive_label_patrol_state">Patrol Status</string>
    <string name="drive_label_indicator_led">Location State</string>
    <string name="drive_label_power_on_hours">Power-On Hours</string>
    <string name="logical_label_volume_name">Name</string>
    <string name="logical_label_raid_level">RAID Level</string>
    <string name="logical_label_capacity">Capacity</string>
    <string name="logical_label_strip_size">Strip Size</string>
    <string name="logical_label_sscd_caching">SSCD Caching</string>
    <string name="logical_label_default_read_policy">Default Read Policy</string>
    <string name="logical_label_current_read_policy">Current Read Policy</string>
    <string name="logical_label_default_write_policy">Default Write Policy</string>
    <string name="logical_label_current_write_policy">Current Write Policy</string>
    <string name="logical_label_default_io_policy">Default IO Policy</string>
    <string name="logical_label_current_io_policy">Current IO Policy</string>
    <string name="logical_label_disk_cache_policy">Disk Cache Policy</string>
    <string name="logical_label_access_policy">Access Policy</string>
    <string name="logical_label_init_state">Initialization State</string>
    <string name="logical_label_bgi_enabled">BGI Enabled</string>
    <string name="logical_label_l2_cache">Used for L2 Cache</string>
    <string name="logical_label_consistency_check">Consistency Check</string>
    <string name="logical_label_boot_disk">Boot Disk</string>
</resources>