<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/folder_menus">
        <item
            android:id="@+id/healthy_menu"
            android:icon="@mipmap/ic_healthy_event"
            android:title="@string/ds_label_menu_health" />
        <item
            android:id="@+id/log_menu"
            android:icon="@mipmap/ic_log"
            android:title="@string/ds_label_menu_system_log" />
        <item
            android:id="@+id/network_setting_menu"
            android:icon="@mipmap/ic_network_setting"
            android:title="@string/ds_label_menu_network_setting" />
        <item
            android:id="@+id/hardware_menu"
            android:icon="@mipmap/ic_hardware"
            android:title="@string/ds_label_menu_hardware" />
        <item
            android:id="@+id/realtiem_status_menu"
            android:icon="@mipmap/ic_realtime_state"
            android:title="@string/ds_label_menu_realtime_state" />
        <item
            android:id="@+id/device_location_menu"
            android:icon="@mipmap/ic_location"
            android:title="@string/ds_label_menu_location" />
        <item
            android:id="@+id/comsumption_menu"
            android:icon="@mipmap/ic_power_consumption"
            android:title="@string/ds_label_menu_power_consumption" />
        <item
            android:id="@+id/expend_menu"
            android:icon="@mipmap/ic_more"
            android:title="@string/ds_label_menu_expend" />
    </group>

    <group android:id="@+id/more_menus">
        <item
            android:id="@+id/start_setting_menu"
            android:icon="@mipmap/ic_start_setting"
            android:title="@string/ds_label_menu_boot_setting" />
        <item
            android:id="@+id/power_toggle_menu"
            android:icon="@mipmap/ic_power_toggle"
            android:title="@string/ds_label_menu_power" />
        <item
            android:id="@+id/locate_lamp_menu"
            android:icon="@mipmap/ic_locate_lamp"
            android:title="@string/ds_label_menu_indicator_LED" />
        <item
            android:id="@+id/firmware_menu"
            android:icon="@mipmap/ic_firmware"
            android:title="@string/ds_label_menu_firmware" />
        <item
            android:id="@+id/generate_report_menu"
            android:icon="@mipmap/ic_report"
            android:title="@string/ds_label_menu_report" />
        <item
            android:id="@+id/collection_menu"
            android:icon="@mipmap/ic_collection"
            android:title="@string/ds_label_menu_collector" />
        <item
            android:id="@+id/folder_menu"
            android:icon="@mipmap/ic_folder"
            android:title="@string/ds_label_menu_folder" />
    </group>

</menu>