<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/system_log_create_date_today"
        android:title="@string/system_log_select_create_date_today" />
    <item
        android:id="@+id/system_log_create_date_seven_days"
        android:title="@string/system_log_select_create_date_seven_days" />
    <item
        android:id="@+id/system_log_create_date_one_month"
        android:title="@string/system_log_select_create_date_one_month" />
    <item
        android:id="@+id/system_log_create_data_range"
        android:checked="true"
        android:title="@string/system_log_select_create_date_range" />
    <item
        android:checked="true"
        android:title="@string/system_log_select_all" />
</menu>